fix(style): align center

--- a/src/styles/Tile.css
+++ b/src/styles/Tile.css
@@ -1,6 +1,8 @@
+
 .music-tile{
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
     height: 60px;
     padding: 0 20px 0 20px;
